@@ -3,7 +3,7 @@
 
 <table width="100%">
 
-  <?lsmb INCLUDE letterhead.html ?>
+  <?lsmb INCLUDE "letterhead.html" ?>
   
   <tr>
     <td width=10>&nbsp;</td>
